# BSUIR-hackathon-2023

./: .gitignore  hackathon.md
artwork/render/: prepod_agree.avi  prepod_agree_partly.avi  prepod_disagree.avi  prepod_idle.avi  prepod_result.avi
hackathon-2023/: CMakeLists.txt  CMakeLists.txt.user.dafbe17  Read and Write.cpp  Write.h  choice.cpp  choice.h  choice.ui  comparison.cpp  comparison.h  difficulty.cpp  difficulty.h  difficulty.ui  dynamiclabel.cpp  dynamiclabel.h  dynamiclineedit.cpp  dynamiclineedit.h  dynamicradiobutton.cpp  dynamicradiobutton.h  editor.cpp  editor.h  editor.ui  editor.ui.autosave  exam.cpp  exam.h  exam.ui  filesystem.cpp  filesystem.h  input.txt  input_1.txt  input_2.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  prepod.cpp  questions.cpp  settings.cpp  settings.h  settings.ui
hackathon-2023/images/: images.qrc
